--- a/LaTeX/includes/deckblatt.tex
+++ b/LaTeX/includes/deckblatt.tex
@@ -7,31 +7,40 @@
 \end{verbatim}
 
 \begin{center}
-\large{\textbf{ Development Notes }}
+\large{Development Notes }
 
 \end{center}
 
 \begin{verbatim}
 
 
+
+\end{verbatim}
+\begin{center}
+	\makebox[\linewidth]{\rule{\linewidth}{0.4pt}}
+\end{center}
+\begin{verbatim}
+	
+\end{verbatim}
+\begin{center}
+	\textbf{\huge RLCV3} 
+\end{center}
+\begin{verbatim}
+	
 \end{verbatim}
 
+\begin{center}
+	\large Design and Development of an Embedded System Utilizing Dedicated Hard- and Software Subsystems for RGB LED Fixture Control
+\end{center}
+\begin{verbatim}
+	
+\end{verbatim}
 \begin{center}
 	\makebox[\linewidth]{\rule{\linewidth}{0.4pt}}
 \end{center}
 
-
-\begin{center}
-	
-	\textbf{\LARGE Design and development of an embedded system for controlling RGB LED fixtures}
-\end{center}
-
-\begin{center}
-	 \large Controlling RGB LED fixtures with dedicated hard- and software subsystems in an combined embedded system
-	  \makebox[\linewidth]{\rule{\linewidth}{0.4pt}}
-\end{center}
-
 \begin{verbatim}
+	
 	
 	
 \end{verbatim}
