--- a/LaTeX/includes/Abkuerzungsverzeichnis.tex
+++ b/LaTeX/includes/Abkuerzungsverzeichnis.tex
@@ -8,9 +8,11 @@
 \begin{acronym}[1234567890]\itemsep1pt
 	\acro{3D}[3D]{Three-Dimensional}
 	\acro{CAD}[CAD]{Computer-Aided Design}
+	\acro{COB}[COB]{Chip-on-Board}
 	\acro{DC}[DC]{Direct Current}
 	\acro{DCDC}[DC-DC]{Direct Current to Direct Current}
 	\acro{DMX}[DMX]{Digital Multiplexing}
+	\acro{EDA}[EDA]{Electronic Design Automation}
 	\acro{EEPROM}[EEPROM]{Electrically Erasable Programmable Read-Only Memory}
 	\acro{HMI}[HMI]{Human-Machine Interface}
 	\acro{HSV}[HSV]{Hue, Saturation, Value}
@@ -18,13 +20,18 @@
 	\acro{IC}[IC]{Integrated Circuit}
 	\acro{IO}[I/O]{Input/Output}
 	\acro{IP}[IP]{Internet Protocol}
+	\acro{IPA}[IPA]{Isopropyl Alcohol}
 	\acro{LED}[LED]{Light-Emitting Diode}
 	\acro{MCU}[MCU]{Microcontroller Unit}
+	\acro{MOSFET}[MOSFET]{Metal-Oxide-Semiconductor Field-Effect Transistor}
 	\acro{OLED}[OLED]{Organic Light-Emitting Diode}
 	\acro{PCB}[PCB]{Printed Circuit Board}
 	\acro{PWM}[PWM]{Pulse Width Modulation}
 	\acro{RGB}[RGB]{Red Green Blue}
+	\acro{RJ45}[RJ45]{Registered Jack 45}
 	\acro{RS485}[RS485]{Recommended Standard 485}
+	\acro{SMD}[SMD]{Surface-Mount Device}
+	\acro{THT}[THT]{Through-Hole Technology}
 	\acro{USB}[USB]{Universal Serial Bus}
 	\acro{WLAN}[WLAN]{Wireless Local Area Network}
 \end{acronym}
