Update latex development documentation

--- a/LaTeX/body.tex
+++ b/LaTeX/body.tex
@@ -79,14 +79,17 @@
 	\newpage
 	\input{./chapter/mechanical_design_and_enclosure}
 	\newpage
-	\input{./chapter/assembly_and_integration}
-	\newpage
 	\input{./chapter/software_development}
+	\newpage
+	\input{./chapter/assembly_and_integration}
 	\newpage
 	\input{./chapter/results}
 	\newpage
+	\input{./chapter/fixture_controll}
+	\newpage
 	\input{./chapter/conlusion}
 	\newpage
+	\appendix
 	\input{./chapter/appendices}
 	\newpage
 	
@@ -96,7 +99,7 @@
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	%%%%%%%%%%  Literature and Appendix
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\fancyhf{} % Clear all header and footer fields
+%	\fancyhf{} % Clear all header and footer fields
 	% switch page numberin to roman
 	\pagenumbering{Roman}
 
@@ -104,7 +107,7 @@
 	% !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 	% !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 	% Has to be done manually !!!!!!!!!!!!!!!!!!!!!!
-	\setcounter{page}{7}
+	\setcounter{page}{9}
 
 	% Literature
 	\phantomsection
