--- a/LaTeX/includes/Abkuerzungsverzeichnis.tex
+++ b/LaTeX/includes/Abkuerzungsverzeichnis.tex
@@ -5,34 +5,46 @@
 \addcontentsline{toc}{section}{List of Abbreviations}
 
 \section*{List of Abbreviations}
-\begin{acronym}[1234567890]\itemsep1pt
-	\acro{3D}[3D]{Three-Dimensional}
-	\acro{CAD}[CAD]{Computer-Aided Design}
-	\acro{COB}[COB]{Chip-on-Board}
-	\acro{DC}[DC]{Direct Current}
-	\acro{DCDC}[DC-DC]{Direct Current to Direct Current}
-	\acro{DMX}[DMX]{Digital Multiplexing}
-	\acro{EDA}[EDA]{Electronic Design Automation}
-	\acro{EEPROM}[EEPROM]{Electrically Erasable Programmable Read-Only Memory}
-	\acro{HMI}[HMI]{Human-Machine Interface}
-	\acro{HSV}[HSV]{Hue, Saturation, Value}
-	\acro{I2C}[I2C]{Inter-Integrated Circuit}
-	\acro{IC}[IC]{Integrated Circuit}
-	\acro{IO}[I/O]{Input/Output}
-	\acro{IP}[IP]{Internet Protocol}
-	\acro{IPA}[IPA]{Isopropyl Alcohol}
-	\acro{LED}[LED]{Light-Emitting Diode}
-	\acro{MCU}[MCU]{Microcontroller Unit}
-	\acro{MOSFET}[MOSFET]{Metal-Oxide-Semiconductor Field-Effect Transistor}
-	\acro{OLED}[OLED]{Organic Light-Emitting Diode}
-	\acro{PCB}[PCB]{Printed Circuit Board}
-	\acro{PWM}[PWM]{Pulse Width Modulation}
-	\acro{RGB}[RGB]{Red Green Blue}
-	\acro{RJ45}[RJ45]{Registered Jack 45}
-	\acro{RS485}[RS485]{Recommended Standard 485}
-	\acro{SMD}[SMD]{Surface-Mount Device}
-	\acro{THT}[THT]{Through-Hole Technology}
-	\acro{USB}[USB]{Universal Serial Bus}
-	\acro{WLAN}[WLAN]{Wireless Local Area Network}
-\end{acronym}
-
+\begin{multicols}{2}
+	\begin{acronym}[1234567890]\itemsep1pt
+		\acro{3D}[3D]{Three-Dimensional}
+		\acro{API}[API]{Application Programming Interface}
+		\acro{CAD}[CAD]{Computer-Aided Design}
+		\acro{COB}[COB]{Chip-on-Board}
+		\acro{DC}[DC]{Direct Current}
+		\acro{DCDC}[DC-DC]{Direct Current to Direct Current}
+		\acro{DMX}[DMX]{Digital Multiplexing}
+		\acro{EDA}[EDA]{Electronic Design Automation}
+		\acro{EEPROM}[EEPROM]{Electrically Erasable Programmable Read-Only Memory}
+		\acro{FDM}[FDM]{Fused Deposition Modeling}
+		\acro{FIFO}[FIFO]{First In First Out}
+		\acro{GUI}[GUI]{Graphical User Interface}
+		\acro{HMI}[HMI]{Human-Machine Interface}
+		\acro{HSV}[HSV]{Hue, Saturation, Value}
+		\acro{I2C}[I2C]{Inter-Integrated Circuit}
+		\acro{IC}[IC]{Integrated Circuit}
+		\acro{IDE}[IDE]{Integrated Development Environment}
+		\acro{IO}[I/O]{Input/Output}
+		\acro{IP}[IP]{Internet Protocol}
+		\acro{IPA}[IPA]{Isopropyl Alcohol}
+		\acro{LED}[LED]{Light-Emitting Diode}
+		\acro{MCU}[MCU]{Microcontroller Unit}
+		\acro{MOSFET}[MOSFET]{Metal-Oxide-Semiconductor Field-Effect Transistor}
+		\acro{OLED}[OLED]{Organic Light-Emitting Diode}
+		\acro{PCB}[PCB]{Printed Circuit Board}
+		\acro{PEI}[PEI]{Polyetherimide}
+		\acro{PETG}[PETG]{Polyethylene Terephthalate Glycol}
+		\acro{PLA}[PLA]{Polylactic Acid}
+		\acro{PNG}[PNG]{Portable Network Graphics}
+		\acro{PWM}[PWM]{Pulse Width Modulation}
+		\acro{RGB}[RGB]{Red Green Blue}
+		\acro{RJ45}[RJ45]{Registered Jack 45}
+		\acro{RPM}[RPM]{Revolutions Per Minute}
+		\acro{RS485}[RS485]{Recommended Standard 485}
+		\acro{SMD}[SMD]{Surface-Mount Device}
+		\acro{THT}[THT]{Through-Hole Technology}
+		\acro{USB}[USB]{Universal Serial Bus}
+		\acro{VCS}[VCS]{Version Control System}
+		\acro{WLAN}[WLAN]{Wireless Local Area Network}
+	\end{acronym}
+\end{multicols}
